# allan_variance

./: CMakeLists.txt  README.md
config/: hfi.yaml
data/: allan_variance.csv  imu.yaml  imu_data.bag
include/: AllanVarianceComputor.hpp  ImuMeasurement.hpp  yaml_parsers.hpp
scripts/: analysis.py
src/: AllanVarianceComputor.cpp  allan_variance.cpp  yaml_parsers.cpp
